# topagent

./: AGENTS.md  CLAUDE.md  README.md  REVIEW_RULES.md
crates/topagent-cli/: Cargo.toml
crates/topagent-cli/src/: access.rs  checkpoint.rs  config.rs  doctor.rs  learning.rs  main.rs  managed_files.rs  memory.rs  openrouter_models.rs  operational_paths.rs  progress.rs  run_context.rs  run_setup.rs  service.rs  telegram.rs  workspace_state.rs
crates/topagent-cli/src/commands/: artifact_util.rs  checkpoint_cli.rs  config.rs  dispatch.rs  memory_cli.rs  mod.rs  oneshot.rs  procedure_cli.rs  run.rs  surface.rs  trajectory_cli.rs  types.rs
crates/topagent-cli/src/config/: defaults.rs  keys.rs  mod.rs  model_selection.rs  runtime.rs  summary.rs  workspace.rs
crates/topagent-cli/src/doctor/: lint.rs  mod.rs  render.rs  service.rs  types.rs  workspace.rs
crates/topagent-cli/src/memory/: briefing.rs  memory_consolidation.rs  observation.rs  procedures.rs  promotion.rs  trajectories.rs
crates/topagent-cli/src/service/: detect.rs  install.rs  lifecycle.rs  (+8 more)
crates/topagent-cli/tests/: current_flows_test.rs  installer_script_test.rs  review_rules_smoke_test.rs  service_command_test.rs  smoke_test.rs
crates/topagent-core/: Cargo.toml
crates/topagent-core/src/: agent.rs  approval.rs  behavior.rs  cancel.rs  checkpoint.rs  command_exec.rs  compaction.rs  context.rs  error.rs  external.rs  file_util.rs  hooks.rs  lib.rs  model.rs  openrouter.rs  operator_profile.rs  plan.rs  prompt.rs  provenance.rs  provider_factory.rs  run_snapshot.rs  run_state.rs  runtime.rs  secrets.rs  session.rs  task_result.rs  tool_genesis.rs  tool_spec.rs
crates/topagent-core/tests/: agent_kernel_test.rs  agent_loop_test.rs  behavior_action_policy_test.rs  behavior_approval_policy_test.rs  behavior_compaction_policy_test.rs  behavior_durability_policy_test.rs  behavior_task_policy_test.rs  capability_access_test.rs  hooks_lifecycle_test.rs  lifecycle_scenario_test.rs  operational_trust_test.rs  planning_integration_test.rs  secret_exfiltration_test.rs  skills_harness_test.rs
(+93 files in other folders)
