[package]
edition = "2021"
version = "0.1.0"
name = "topagent-cli"
repository = "https://github.com/TopWayAI/topagent"

[[bin]]
name = "topagent"
path = "src/main.rs"

[dependencies]
topagent-core = { path = "../topagent-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
